--- a/src/NavigationController/NavigationView.form
+++ b/src/NavigationController/NavigationView.form
@@ -26,7 +26,6 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="107" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="moodButton" max="32767" attributes="0"/>
                   <Component id="intakeButton" max="32767" attributes="0"/>
                   <Component id="profileButton" alignment="0" max="32767" attributes="0"/>
                   <Component id="notificationButton" alignment="0" max="32767" attributes="0"/>
@@ -43,8 +42,6 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="intakeButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="moodButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="profileButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="notificationButton" min="-2" max="-2" attributes="0"/>
@@ -63,21 +60,10 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="99" red="99" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Intake"/>
+        <Property name="text" type="java.lang.String" value="Input Intake &amp; Mood"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="intakeButtonActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="moodButton">
-      <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="99" green="99" red="ff" type="rgb"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Mood"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="moodButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="profileButton">
