--- a/src/CrudUserProfileView/UserProfileView.form
+++ b/src/CrudUserProfileView/UserProfileView.form
@@ -83,14 +83,12 @@
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="imageLabel">
-      <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/resources/default-profile.png"/>
-        </Property>
-      </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="imageLabelMouseClicked"/>
       </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JLabel(profilePicIcon);"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="homeButton">
       <Properties>
